# youtube

./: Cargo.toml  Dockerfile  docker-compose.yml
backend/: Cargo.toml  Dockerfile  diesel.toml
backend/migrations/2023-12-16-205849_create_videos_tsvector/: down.sql  up.sql
backend/src/: auth.rs  config.rs  models.rs  schema.rs
backend/src/controllers/: auth.rs  mod.rs  videos.rs
frontend/: index.html  package.json
frontend/src/api/: index.ts
frontend/src/layouts/default/: AppBar.vue
frontend/src/router/: index.ts
frontend/src/views/: Home.vue  Login.vue  Upload.vue  Watch.vue
migrations/2023-12-13-124528_create_users/: up.sql
migrations/2023-12-13-124715_create_videos/: up.sql
migrations/2023-12-16-205849_create_videos_tsvector/: down.sql  up.sql
migrations/2023-12-18-141726_create_likes/: down.sql  up.sql
src/: config.rs  errors.rs  main.rs  models.rs  schema.rs  video_util.rs
src/controllers/: videos.rs
